--- a/.github/ISSUE_TEMPLATE/-------.md
+++ b/.github/ISSUE_TEMPLATE/-------.md
@@ -7,12 +7,18 @@ assignees: ''
 
 ---
 
-各ページに対する正誤の報告は、下記の「あらかじめページごとに用意したissue」へのコメントでお願いしています。
+# ページに対する正誤の場合
 
-* `https://github.com/LambdaNote/errata-voyagebook-1-1/[ページノンブル+10]`
+下記のURLでアクセスできる「あらかじめページごとに用意したissue」に移動して、そのissueに「コメント」をお願いします。
 
-上記URLのissueは初期状態ではすべてcloseされています。
-報告したい正誤は「コメント」として追記してください。
-コメントを確認後、こちらでissueをReopenします。
+* 目次より前のページの場合：
+  https://github.com/LambdaNote/errata-voyagebook-1-1/[ローマ数字のページの値+14]
 
-ページごとに指摘が難しい正誤のご指摘は、このテンプレートを消し、そのまま本文の記載をお願いいたします。
+* 目次より後のページの場合：
+  https://github.com/LambdaNote/errata-voyagebook-1-1/[ページ番号の値+14]
+
+issueは、初期状態ではすべてcloseされています。コメントを確認後にこちらでreopenします。
+
+# ページごとに指摘が難しい正誤の場合
+
+このテンプレートを消して、そのまま本文の記載をお願いします。
